--- a/AboutUS.css
+++ b/AboutUS.css
@@ -1,7 +1,7 @@
 /* Estilos simples para la presentación */
 .logo {
-    width: 5px/* Tamaño de la imagen */
-    heightauto; /* Para mantener la proporción */
+    width:.2px/* Tamaño de la imagen */
+    height: 2p.x..; /* Para mantener la proporción */
     margin-right: 5px; /* Espacio a la derecha */
 }
 
