--- a/ContactoPage/contactoStyles.css
+++ b/ContactoPage/contactoStyles.css
@@ -24,22 +24,26 @@ body {
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: 100;
     font-style: normal;
-    font-size: 22px;
+    font-size: 18px;
     background: #F5E2BE;
 }
+
+#parrafo {
+    text-align: justify;
+  }
 
 h1 {
     font-family: "Hammersmith One", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 38px;
+    font-size: 30px;
 }
 
 h2 {
     font-family: "Hammersmith One", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 30px;
+    font-size: 28px;
 }
 
 h3 {
@@ -91,3 +95,5 @@ h3 {
     color: black;
     padding-top:20px ;
 }
+
+
