--- a/ContactoPage/contactoStyles.css
+++ b/ContactoPage/contactoStyles.css
@@ -86,11 +86,10 @@ h3 {
 }
 
 .warnings{
-    width: 200px;
+    font-size: 14px;
     text-align: center;
-    margin: auto;
-    color: black;
-    padding-top:20px ;
+    margin-top: 10px;
+    color: red;
 }
 #myMap {
     width: 95%; 
