Revert "improving functionality"
This reverts commit 6ec371fcada3b6ebe174bc40737e102d27ec56a9.

Revirtiendo el merged y commit, tengo fe.

--- a/ContactoPage/contactoStyles.css
+++ b/ContactoPage/contactoStyles.css
@@ -86,10 +86,11 @@ h3 {
 }
 
 .warnings{
-    font-size: 14px;
+    width: 200px;
     text-align: center;
-    margin-top: 10px;
-    color: red;
+    margin: auto;
+    color: black;
+    padding-top:20px ;
 }
 #myMap {
     width: 95%; 
