--- a/ContactoPage/contactoStyles.css
+++ b/ContactoPage/contactoStyles.css
@@ -24,22 +24,26 @@ body {
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: 100;
     font-style: normal;
-    font-size: 22px;
+    font-size: 18px;
     background: #F5E2BE;
 }
+
+#parrafo {
+    text-align: justify;
+  }
 
 h1 {
     font-family: "Hammersmith One", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 38px;
+    font-size: 30px;
 }
 
 h2 {
     font-family: "Hammersmith One", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 30px;
+    font-size: 28px;
 }
 
 h3 {
@@ -55,7 +59,6 @@ h3 {
     border-radius: 3%;
     background: #f5e2be; /* 7c946c f3ab91 f5e2be f8c0a9*/
 }
-
 
 .form-label{
     color: black;
@@ -82,7 +85,7 @@ h3 {
 
 .info {
     display: inline-block;
-    vertical-align: center;
+    vertical-align: middle;
 }
 
 .warnings{
@@ -92,21 +95,5 @@ h3 {
     color: black;
     padding-top:20px ;
 }
-#myMap {
-    width: 95%; 
-    height: 220px;
-}
-.col-sm {
-    margin-bottom: 20px; 
-}
 
-#parrafo {
-    text-align: justify; 
-    margin-right: 20px; 
-}
-
-#col-der {
-    max-width: 470px; 
-    margin-bottom: 0; 
-}
 
