--- a/principal/styles-principal-carrusel.css
+++ b/principal/styles-principal-carrusel.css
@@ -10,9 +10,18 @@ body {
 }
 
 img {
-    width: 10;
-    height: 400px;
+    max-width: 1000px;
+    height: 500px;
     margin: 15px;
     padding: 10;
     border-radius: 20px;
+    position: relative;
+
+}
+
+.container {
+    padding-top: 100px;
+    
+    align-self: center;
+    align-items: center;
 }
