Avance actualizado y conectado. Falta agregar contactanos

--- a/recupera_contraseña/recupcontra.css
+++ b/recupera_contraseña/recupcontra.css
@@ -48,8 +48,10 @@
         text-align: center;
     }
 
-    #imagenlog{
+    #logodos{
         align-items: center;
+        margin-top: 80px;
+        margin-left: 40px;
     }
 
    
