--- a/About Us/styles/Styles.css
+++ b/About Us/styles/Styles.css
@@ -105,3 +105,12 @@ h3 {
             left: 75px;
             border: 4px solid #fff;
         }
+       
+            footer {
+                background-color: #e07A76;
+                text-align: justify;
+                width: 1500px;
+                height: 40px;
+            }
+        
+        
