--- a/comunidad/comunidad.css
+++ b/comunidad/comunidad.css
@@ -104,12 +104,13 @@ margin-right: 15px;
 
 .user-profile {
     display: flex;
-    
     align-items: center;
+    margin-bottom: 10px;
 }
 
 .user-profile img{
-    width: 45px;
+    width: 50px;
+    height: 50px;
    border-radius: 50%;
    margin-right: 10px;
 }
