--- a/principal/styles-principal-carrusel.css
+++ b/principal/styles-principal-carrusel.css
@@ -1,15 +1,52 @@
-body {
-    background-color: #F8C0A9;
-    font-family: "Josefin Sans";
-    font-weight: 400;
+/*Estilos para la Navbar*/
+.header .navbar-brand {
+    color: white !important;
 }
 
+.header .nav-link {
+    color: white !important;
+    font-size: 16.5px;
+}
+
+.header .nav-link:hover {
+    color: rgb(99, 56, 56) !important;
+}
+
+@media(max-width: 700px){
+    .nav-link{text-align: center;}
+}
+
+.header .navbar {
+    background-image: linear-gradient(to right, #F5E2BE, #e07A76);
+}
+
+
+/*Estilos en general para todo nuestro documento, incluye las fuentes que se usaran en todos los elementos*/
+    body {
+        font-family: "IBM Plex Sans", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+    }
+
+
+    h1,h2 {
+        font-family: "Hammersmith One", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        padding: 20px;
+    }
+
+    p{text-align: justify;}
+
+
+    /*Tamaño del otro logo*/
 #logo {
     width: 250px;
     height: 80px;
 }
 
-img {
+/*Estilo para imágenes del carrusel*/
+/*img {
     max-width: 1000px;
     height: 500px;
     margin: 15px;
@@ -17,11 +54,4 @@ img {
     border-radius: 20px;
     position: relative;
 
-}
-
-.container {
-    padding-top: 100px;
-    
-    align-self: center;
-    align-items: center;
 }
