--- a/principal/styles-principal-carrusel.css
+++ b/principal/styles-principal-carrusel.css
@@ -57,11 +57,19 @@
             height: auto; 
     }
 
-    .btn {
+    #btn {
         display: grid;
             place-items: center; 
             height: auto; 
             background-color: #7C946C;
+            border-radius: 10px;
+            gap: 10px;
+            padding: 8px;
+            margin: 10px;
+            font-family: "IBM Plex Sans", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+        
     }
 
 /*Estilo para imágenes del carrusel*/
