--- a/comunidad/comunidad.css
+++ b/comunidad/comunidad.css
@@ -19,7 +19,7 @@
 }
 
 .header .navbar {
-    background-image: linear-gradient(to right,#7C946C, #7C946C);
+    background-image: linear-gradient(to right,#f6eaed, #ef1188);
     
 }
 
@@ -48,6 +48,14 @@ cursor: pointer;
 
     p{text-align: justify;}
 
+    h3{
+        font-family: "Hammersmith One", sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 20px;
+        text-align: center;
+
+    }
 
 
 /*Estilos del sidebar*/
@@ -60,12 +68,13 @@ cursor: pointer;
    
 
 .left-sidebar{
-background-color: #d3eec1;
+background-color: hsl(318, 69%, 82%);
 flex-basis: 25%;
 
 margin-top:  70px;
 align-self: flex-start;
 position: sticky;
+
 
 }
 
@@ -80,8 +89,9 @@ width: fit-content;
 }
 
 .imp-links a img {
-width: 25px;
+width: 20px;
 margin-right: 15px;
+height: 20px;
 }
 
 .imp-links a:last-child{
@@ -136,11 +146,12 @@ color: #626262;
 
 .post-input-container textarea{
     width: 100%;
-    border: 0;
-    outline: 0;
-    border-bottom: 1px solid #ccc;
+    border: 1px solid #64636d;
+    outline: 1px solid #64636d;
+    border-bottom: 1px solid #64636d;
     background-color: transparent;
     resize: none;
+    
 }
 .add-post{
 display: flex;
@@ -158,3 +169,4 @@ font-size: 13px;
 width: 20px;
 margin-right: 30px;
 }
+
