--- a/styles.css
+++ b/styles.css
@@ -1,70 +1,167 @@
 
 /*Estilos para la Navbar*/
-.header .navbar-brand {
-    color: white !important;
-}
+            .header .navbar-brand {
+                color: white !important;
+            }
 
-.header .nav-link {
-    color: white !important;
-    font-size: 16.5px;
-}
+            .header .nav-link {
+                color: white !important;
+                font-size: 16.5px;
+            }
 
-.header .nav-link:hover {
-    color: rgb(99, 56, 56) !important;
-}
+            .header .nav-link:hover {
+                color: rgb(99, 56, 56) !important;
+            }
 
-@media(max-width: 700px){
-    .nav-link{text-align: center;}
-}
+            @media(max-width: 700px){
+                .nav-link{text-align: center;}
+            }
 
-.header .navbar {
-    background-image: linear-gradient(to right, #F5E2BE, #e07A76);
-}
+            .header .navbar {
+                background-image: linear-gradient(to right, #F5E2BE, #e07A76);
+            }
 
 
 /*Estilos en general para todo nuestro documento, incluye las fuentes que se usaran en todos los elementos*/
-    body {
-        font-family: "IBM Plex Sans", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-    }
+                body {
+                    font-family: "IBM Plex Sans", sans-serif;
+                    font-weight: 400;
+                    font-style: normal;
+                }
 
 
-    h1,h2 {
-        font-family: "Hammersmith One", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-        padding: 20px;
-    }
-
-    p{text-align: justify;}
+                h1,h2 {
+                    font-family: "Hammersmith One", sans-serif;
+                    font-weight: 400;
+                    font-style: normal;
+                    padding: 20px;
+                }
 
 
-/* CSS específico para la sección Sobre Nosotras hecha por MiLai*/
- #team-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            padding: 20px;
+
+
+/*CSS para mi perfil*/
+
+          /*Formato para el header*/
+          .header__wrapper header {
+            width: 100%;
+            background: url("./assets/Cover.jpg") no-repeat 50% 20% / cover;
+            min-height: calc(100px + 15vw);
+            opacity: 0.8;
         }
 
-        .team-member {
-            width: 300px;
-            margin: 20px;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
+
+        /*Formato para la imagen de perfil*/
+
+        .imgLeft {
+            padding: 25px 20px;
             text-align: center;
+            max-width: 350px;
             position: relative;
-        }
+            margin: 0 auto;
+          }
 
-        .team-member img {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            margin-bottom: 10px;
-            position: absolute;
-            top: -75px;
-            left: 75px;
-            border: 4px solid #fff;
-        }
+
+            .imgContainer {
+                top: -30px;
+                position: absolute;
+                left: 10%;
+                margin-left: 100px;
+                transform: translatex(-30%);
+            }
+
+            /*Cambios en la imagen*/
+            .imgContainer img {
+                width: 220px;
+                height: 220px;
+                object-fit: cover;
+                border-radius: 50%;
+                display: block;
+                box-shadow: 1px 3px 12px rgba(0, 0, 0, 0.18);
+            }
+
+
+
+            /*Mi profile class*/
+            .MyProfileCard {
+                background-color: #f0e6e6;
+                border-radius: 15px;
+                padding: 15px 10px 10px 10px;
+                margin-top: 150px;
+            }
+
+
+            #userName {
+                font-weight: 400;
+                font-size: 33px;
+                margin-top: 4px;
+                text-align: center;
+                padding: 0;
+              }
+
+              #userId {
+                font-size: 20px;
+                color: #818181;
+                margin: 0;
+                text-align: center;
+              }
+
+              #userDesc {
+                font-size: 18px;
+                color: #818181;
+                margin: 0;
+                text-align: center;
+              }
+
+
+              #UserChars{
+                font-size: 16px;
+                color: #3f3d3d;
+                align-items: center;
+                text-align: center;
+                margin-top: 20px;
+              }
+
+              .MyProfileCard .Stats {
+                justify-content: space-evenly;
+                position: relative;
+                margin-top: 22px;
+              }
+
+              .MyProfileCard ul {
+                list-style-type: none;
+                padding: 0;
+                display: flex;
+                align-items: center;
+              }
+
+
+              .MyProfileCard .Stats li {
+                display: flex;
+                flex-direction: column;
+                color: #818181;
+                font-size: 16px;
+              }
+
+              
+
+            /*Propiedad para el num de seguidores*/
+              .MyProfileCard .Stats .NumStats {
+                color: #1d1d1d;
+                font-weight: 600;
+              }
+
+              /*Línea separadora de mi perfil*/
+              .MyProfileCard .Stats:after {
+                position: absolute;
+                content: "";
+                bottom: -16px;
+                display: block;
+                background: #cccccc;
+                height: 1px;
+                width: 100%;
+                margin-bottom: 6px;
+              }
+
+
+            
