--- a/comunidad/comunidad.css
+++ b/comunidad/comunidad.css
@@ -221,3 +221,20 @@ margin-right: 30px;
   .button2 {background-color: #e07a76;} /* Blue */
   .button3 {background-color: #f3ab91;} /* Blue */
   
+  .card-link-btn {
+    background-color: #7c947c;
+    border: none;
+    border-radius: 10px;
+    margin: 10px;
+    padding: 8px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+  }
+
+  .dropdown {
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    background-color: #eaf6e2;
+  }
