--- a/Iniciar_sesión/ingreso.css
+++ b/Iniciar_sesión/ingreso.css
@@ -42,12 +42,11 @@
 
 /* Estilos para inicio de sesión*/
 #saludo{
-    display:flexbox;
     margin-top: 30px;
     
 }
 
-@media (max-width: 700px) {
+@media (max-width: 576px) {
     #saludo {
       display: flex;
       justify-content: center;
@@ -59,36 +58,37 @@
    
   }
 
-.centered-image {
-    display: flex;
-    justify-content: center;
-}
-
-
 
 #logodos{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    width: 365px;
-    margin-top: 80px;
+    max-width: 100%; /*La imagen no puede ser más ancha que el contenedor */
+    max-height:100%; /* La imagen no puede ser más alta que el contenedor */
+    
     
 }
 
-.col-sm{
-    display:flexbox;
+#left{
+    position:relative;
+    display:flex;
     justify-content: center;
     align-items: center;
 }
 
-/*
 @media (max-width: 576px) {
-    .container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
+    #left {
+        flex-direction: column;
     }
 
+    #logodos{
+        max-width: 70%; /*Reducir el tamaño en pantallas pequeñas*/
+        margin-top: 15px;
+        margin-bottom: 15px; 
+    }
+
+    #saludo{
+        margin-top: auto;
+    }
 }
-]/
+
+#boton{
+    text-align: center;
+}
