--- a/recupera_contraseña/recupcontra.css
+++ b/recupera_contraseña/recupcontra.css
@@ -39,19 +39,47 @@
     p{text-align: justify;}
 
 
-    /*Estilos contenido */
-    .container{
-        margin-top: 20px;
-    }
-
+    /*Estilos contenido de recupera contraseña */
     #titulo{
+        margin-top: 30px;
         text-align: center;
     }
 
-    #logodos{
+    
+ @media (max-width: 576px){
+    #titulo{
+        display:flex;
+        justify-content: center;
         align-items: center;
-        margin-top: 80px;
-        margin-left: 40px;
+        text-align:center;
+        margin-top: auto;
     }
+
+    #right{
+        flex-direction: column;
+    }
+
+    #logodos{
+        max-width: 70%;
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+
+
+}
+
+#logodos{
+    max-width: 100%;
+    max-height: 100%;
+}
+
+#right{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
 
    
