--- a/paginaComunidad/comunidadStyle.css
+++ b/paginaComunidad/comunidadStyle.css
@@ -217,3 +217,21 @@ h3 {
     text-decoration: none;
     display: inline-block;
   }
+
+  #post-btn {
+    display: grid;
+        place-items: center; 
+        height: auto; 
+        background-color: #7C946C;
+        border-radius: 10px;
+        border: none;
+        gap: 10px;
+        padding: 8px;
+        margin: 10px;
+        font-family: "IBM Plex Sans", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        color: white !important;
+        font-size: 16.5px;
+    
+}
