--- a/principal/styles-principal-carrusel.css
+++ b/principal/styles-principal-carrusel.css
@@ -57,6 +57,8 @@
             height: auto; 
     }
 
+
+    /*Estilo de botones de registro e inicio de sesión */
     #btn {
         display: grid;
             place-items: center; 
@@ -69,7 +71,14 @@
             font-family: "IBM Plex Sans", sans-serif;
             font-weight: 400;
             font-style: normal;
+            color: white !important;
+            font-size: 16.5px;
+            text-decoration: none;
         
+    }
+
+    #btn:hover {
+        color: rgb(99, 56, 56) !important;
     }
 
 /*Estilo para imágenes del carrusel*/
@@ -78,3 +87,5 @@
         height: auto;
         display: block;
 }
+
+
