--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,11 @@
                 color: rgb(99, 56, 56) !important;
             }
 
+            .navbar-nav .dropdown-menu {
+              right: 0;
+              left: auto;
+          }
+
             @media(max-width: 700px){
                 .nav-link{text-align: center;}
             }
@@ -242,4 +247,55 @@ font-size: 13px;
 .add-post a img{
 width: 20px;
 margin-right: 30px;
+}
+
+
+
+/*Para crear las  publicaciones del usuario*/
+.card {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 20px;
+  margin: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.card:hover {
+  background-color: #f5e2be59;
+}
+
+.card h2 {
+  margin: 0 0 10px 0;
+}
+.card p {
+  margin: 10px 0;
+}
+.tags {
+  list-style-type: none;
+  padding: 3px;
+  margin: 3px;
+}
+.tags li {
+  display: inline;
+  background: #e07A76;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+  margin: 3px;
+}
+
+.userID{
+  font-style: italic;
+  color: #3f3d3d;
+  margin: 0;
+  padding: 0;
+  font-size: 15px;
+}
+
+.userNAME{
+  font-style: italic;
+  color: #020202;
+  margin: 0px;
+  padding: 0px;
+  font-size: 30px;
 }
