--- a/Configurar-perfil/configuracion.css
+++ b/Configurar-perfil/configuracion.css
@@ -14,7 +14,16 @@
 }
 
 @media(max-width: 700px){
-    .nav-link{text-align: center;}
+    .navbar { /*Se ajusta a disposición vertical en pantallas pequeñas.*/
+        flex-direction: column;
+        align-items: center;
+    } 
+    .nav-link{text-align: center;
+        padding: 10px 0;
+        display: block;
+        width: 100%;
+    
+    }
 }
 
 .header .navbar {
@@ -47,13 +56,15 @@ h3 {
 /* Contenedor principal*/
 
 .container {
+   
     margin-top: 40px;
-    background: rgb(234, 238, 226);
+    background: rgb(251, 251, 251);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(114, 5, 5, 0.1);
     text-align: center;
-    width: 400px;
+    width: 90%;
+    max-width: 400px; /* para adaptarse a diferentes tamaños de pantalla*/
    
 }
 
@@ -66,8 +77,9 @@ h3 {
 .profile-pic-container img {
     display: block;
     margin: 0 auto;
-    width: 150px;
-    height: 150px;
+    width: 100%; /*para mantener proporciones*/
+    max-width: 150px;
+    height: auto;
     border-radius: 50%;
 }
 
@@ -79,7 +91,7 @@ h3 {
     display: inline-block;
     margin-top: 10px;
     padding: 10px 20px;
-    background-color: #ea1896;
+    background-color: #e07a76;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -88,7 +100,7 @@ h3 {
 }
 
 .profile-pic-container label:hover {
-    background-color: #66c506;
+    background-color: #f3ab91;
 }
 
 /*  Cambiar foto  de portada */
@@ -100,7 +112,7 @@ h3 {
 .portada-pic-container img {
     margin-top: 5px;
     width: 100%;
-    height: 300px;
+    height: auto;
     object-fit: cover;  /*para asegurarse de que la imagen se ajuste correctamente.*/
 }    
     
@@ -112,7 +124,7 @@ h3 {
     display: inline-block;
     margin-top: 10px;
     padding: 10px 20px;
-    background-color: #df0db8;
+    background-color: #e07a76;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -121,13 +133,8 @@ h3 {
 }
 
 .portada-pic-container label:hover {
-    background-color: #2db300;
+    background-color: #f3ab91;
 }
-
-
-
-
-
 
 
 form {
@@ -145,20 +152,24 @@ form input {
     margin-top: 5px;
     border-radius: 5px;
     border: 1px solid #f3d8d8;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 button {
     margin-top: 20px;
     padding: 10px 20px;
-    background: #ff006f;
+    background: #7c946c;
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 button:hover {
-    background: #efe465;
+    background: #f3ab91;
 }
 
 .deleteAccount {
