--- a/pagComunidad/comunidadStyle.css
+++ b/pagComunidad/comunidadStyle.css
@@ -239,24 +239,12 @@ h3 {
 
 .card-container {
     display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
+    flex-direction: column;
+    align-items: center;
 }
 .card {
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 20px;
-    width: 300px;
-}
-.card img {
-    width: 100%;
-    border-radius: 5px;
-}
-.card h2 {
-    margin: 0;
-}
-.card p {
-    margin: 10px 0;
+    width: 80%; /* Ajustar el ancho de las tarjetas al 80% */
+    margin-bottom: 20px; /* Espacio entre tarjetas */
 }
 .tags {
     display: flex;
@@ -268,4 +256,15 @@ h3 {
     padding: 5px 10px;
     border-radius: 3px;
     font-size: 0.9em;
+}
+.card-profile-photo {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.card-img-top{
+    height: 250px;
+    width: 80%;
 }
