--- a/principal/styles-principal-carrusel.css
+++ b/principal/styles-principal-carrusel.css
@@ -61,10 +61,13 @@ p{text-align: center;}
         height: auto;       
     }
 #logo {
-    width: 50%; 
+
+    max-width: 50%; 
     height: auto;
     box-sizing: border-box;
     padding: 10px;
+    display: block;
+    
 }
 
 
@@ -72,10 +75,14 @@ p{text-align: center;}
         font-family: "Hammersmith One", sans-serif;
         font-weight: 400;
         font-style: normal;
+        text-align: center;
         padding: 20px;
     }
 
-    p{text-align: justify;}
+    p{
+        text-align: center;
+        text-shadow: 4px 4px 10px rgba(255, 0, 0, 0.7);
+    }
 
 
     /*Tamaño del otro logo*/
@@ -84,11 +91,6 @@ p{text-align: center;}
             place-items: center; 
             height: auto;       
         }
-    #logo {
-        max-width: 100%; 
-        height: 300px;
-        display: block;
-    }
 
     .signIn-signUp {
         display: grid;
@@ -155,20 +157,17 @@ p{text-align: center;}
     border-radius: 2rem 0 0 2rem;
 }
 
+.images-container, .about-FemTrek, .identidad-FemTrek, .signIn-signUp, .last-part, .video{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 
-.about-FemTrek{
-    color: #e07a76;
-}
-
-.identidad-FemTrek {
-    background-color: #F5E2BE59;
-}
-
-.signIn-signUp {
-    display: grid;
-        place-items: center; 
-        height: auto; 
-}
+  #fem {
+    color: #e07A76;
+  }
 
 #btn {
     display: grid;
@@ -185,3 +184,47 @@ p{text-align: center;}
     
 }
 
+/*Footer*/
+.download {
+    
+        place-items: center; 
+        align-items: center;
+        height: auto;
+        margin: 10px;
+        border-radius: 10px;
+        text-decoration: none !important;
+        background-color: #ecd6d5;
+        box-shadow: 5px rgb(99, 56, 56);
+        font-family: "IBM Plex Sans", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+}
+
+#facebook {
+   
+        place-items: center; 
+        align-items: center;
+        height: auto;
+        gap: 10px;
+        margin: 10px;
+        font-family: "IBM Plex Sans", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        color: rgb(38, 52, 237) !important;
+        font-size: 16.5px;
+        text-decoration: none;
+}
+
+#Instagram {
+        place-items: center; 
+        align-items: center;
+        height: auto;
+        gap: 10px;
+        margin: 10px;
+        font-family: "IBM Plex Sans", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        color: rgb(224, 93, 6) !important;
+        font-size: 16.5px;
+        text-decoration: none;
+}
