--- a/About Us/styles/Styles.css
+++ b/About Us/styles/Styles.css
@@ -33,18 +33,81 @@
         font-family: "Hammersmith One", sans-serif;
         font-weight: 400;
         font-style: normal;
+        font-size: 50px;
         padding: 20px;
     }
 
 h3 {
     font-family: "Hammersmith One", sans-serif;
     font-weight: 400;
-    font-style: normal;
+    font-style: oblique;
     font-size: 30px;
+    color: #e07A76;
 }
 
+#pmodal{
+    font-family: "IBM Plex Sans", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 15px;
+    text-align: justify;
+}
 
-.custom-card{
+/*Estilos para las imagenes*/
+.image-container {
+    padding: 20px;
+}
+
+.container {
+    padding: 20px;
+}
+
+/*Carta*/
+.team-member {
+    width: 318px; /* Ancho fijo para todas las tarjetas */
+    margin: 20px; /* Espacio alrededor de las tarjetas */
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Sombra suave alrededor de la tarjeta */
+    border-radius: 8px; /* Bordes redondeados */
+    overflow: hidden; /* Asegura que la imagen no desborde los bordes redondeados */
+}
+
+.card-img-top {
+    width: 100%; /* Asegura que la imagen cubra todo el ancho de la tarjeta */
+    height: auto; /* Mantiene la relación de aspecto de la imagen */
+}
+
+.card-body {
+    padding: 15px; /* Espacio interno alrededor del contenido dentro de la tarjeta */
+    text-align: center; /* Centra el texto en la tarjeta */
+}
+
+.card-title {
+    margin-bottom: 10px; /* Espacio debajo del título */
+    color: #f8c0a9; /* Color del texto para el título */
+}
+
+.card-text {
+    margin-bottom: 20px; /* Espacio debajo del texto */
+    color: #666; /* Color del texto para la descripción */
+}
+
+.btn-primary {
+    background-color: #f8c0a9; /* Color de fondo para el botón */
+    border: none; /* Sin borde para el botón */
+    padding: 10px 20px; /* Relleno para el botón */
+}
+
+.btn-primary:hover {
+    background-color: #f8c0a9; /* Color de fondo del botón al pasar el mouse */
+}
+
+#imgmodal{
+    width: 200px; 
+    height: auto;
+    margin-right: 20px;
+}
+
+/*.custom-card{
 	width: 300px;
 	height: 500px;
 }
@@ -104,12 +167,12 @@ h3 {
             top: -75px;
             left: 75px;
             border: 4px solid #fff;
-        }
+        }*/
        
             footer {
                 background-color: #e07A76;
                 text-align: justify;
-                width: 1500px;
+                width: 100%;
                 height: 40px;
             }
         
