Previo a la presentación

--- a/pagComunidad/comunidadStyle.css
+++ b/pagComunidad/comunidadStyle.css
@@ -64,9 +64,14 @@ h3 {
     font-style: normal;
     font-size: 26px;
 }
-#textarea{
-    resize: none;
+
+#postContent{
+    width: 100% ; /* Ancho fijo de 300px */
+    height: 100px;
+    resize: none;  
 }
+
+
 .bg-green{
     border-radius: 3%;
     background: #f5e2be; /* 7c946c f3ab91 f5e2be f8c0a9*/
@@ -126,29 +131,21 @@ h3 {
 }
 /* mis humildes aportes */
 
-/*  tamaño del recuadro para publicar*/ 
-.fixed-size-textarea {
-    width: 80%; /* Revisar al final */
-    height: 90px; /* Altura fija */
-    resize: none; /* Deshabilitar el redimensionamiento */
-}
-
 /* Para que los links no esten subrayados */
 .no-underline {
     text-decoration: none;
     color: black;
 }
-/*colores boton */
-.btn-custom {
-    background-color: #7c947c; /* Color de fondo */
-    border-color:  #7c947c; /* Color del texto */
-    border-radius: 5px;/* redondeo*/
+/*colores tag */
+span.tag {
+    background-color: #DC9693;
+    margin-right: 5px;
+    margin-bottom: 10px; /* Espacio debajo de cada etiqueta */
+    margin-top: 10px;
+    border-radius: 80px;/* redondeo*/
     color: white;
 }
-.btn-custom:hover {
-    background-color: #e07a76;
-    border-color:#e07a76; /* Color de fondo al pasar el mouse */
-}
+
 
 
 .list-group-item-custom {
@@ -268,3 +265,43 @@ h3 {
     height: 250px;
     width: 80%;
 }
+
+
+/* Colores especificos para los botones*/
+.badge-recomendacion {
+    background-color: #6C825E; 
+    color: #fff;
+    border-radius: 0.25rem;
+}
+
+.badge-advertencia {
+    background-color: #B72E2A; 
+    color: #fff;
+}
+
+.badge-resena {
+    background-color: #D49521; 
+    color: #fff;
+
+}
+
+/* botones de conexion*/
+
+button.bn-sl{
+    background-color: #F49E7C;
+    border: none;
+
+}
+
+button.bn-sl:hover{
+    background-color: black; /* consultar qué color */
+
+
+}
+
+button.bn-mg{
+    background-color: #ECC783;
+    border: none;
+
+}
+
