--- a/Pagina-registro/pagina-registro.css
+++ b/Pagina-registro/pagina-registro.css
@@ -34,6 +34,7 @@
         font-weight: 400;
         font-style: normal;
         padding: 20px;
+        
     }
 
     p{text-align: justify;}
@@ -59,6 +60,9 @@
         #prueba2{
             display: none;
         }
+        h1{
+            text-align: center;
+        }
         
     }
 
@@ -68,29 +72,28 @@
         outline: solid 2px rgb(170, 28, 28);
     }
 
-    .alerta-error, 
-    .alerta-exito {
+    .alert-success,
+    .alert-danger {
         display:none;
     }
 
     .alertaError {
         display: block;
-        background-color:rgb(170, 28, 28);
+        /*background-color:rgb(170, 28, 28);*/
         padding: 0.5rem 1 rem;
         margin-top: 10px;
         font-weight: 500;
         font-size: 1rem;
-        color: white;
+        /*color: white;*/
     }
 
     .alertaExito {
         display: block;
-        background-color: rgb(9, 216, 95);
         padding: 0.5rem 1 rem;
         margin-top: 10px;
         font-weight: 500;
         font-size: 1rem;
-        color:white;
+        /*color:white;*/
     }
 
 
