--- a/css/About-Us.css
+++ b/css/About-Us.css
@@ -35,6 +35,7 @@
         font-style: normal;
         font-size: 50px;
         padding: 20px;
+        text-align: center;
     }
 
 h3 {
@@ -43,6 +44,13 @@ h3 {
     font-style: oblique;
     font-size: 30px;
     color: #e07A76;
+}
+
+.about {
+    background-color:#f8bfa9aa;
+    border-radius: 10px;
+    text-align: center;
+    text-shadow: 4px 4px 10px rgba(255, 0, 0, 0.7);
 }
 
 #pmodal{
