--- a/css/Home-Carrousel.css
+++ b/css/Home-Carrousel.css
@@ -45,7 +45,11 @@ h3 {
     text-align: center;
 }
 
-p{text-align: center;}
+p{
+    text-align: center;
+    text-shadow: 4px 4px 10px rgba(255, 0, 0, 0.7);
+}
+
 
 
 .images-container {
@@ -55,11 +59,12 @@ p{text-align: center;}
     flex-wrap: wrap;
 }
 
-/*Tamaño del otro logo*/
+/*Tamaño del otro logo en movimiento*/
 .logobody {
     display: grid;
         place-items: center; 
-        height: auto;       
+        height: auto;  
+             
     }
 #logo {
 
@@ -71,56 +76,65 @@ p{text-align: center;}
     
 }
 
-
-    h1,h2 {
-        font-family: "Hammersmith One", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-        text-align: center;
-        padding: 20px;
-    }
-
-    p{
-        text-align: center;
-        text-shadow: 4px 4px 10px rgba(255, 0, 0, 0.7);
-    }
-
-
-    /*Tamaño del otro logo*/
-    .logobody {
-        display: grid;
-            place-items: center; 
-            height: auto;       
-        }
-
-    .signIn-signUp {
-        display: grid;
-            place-items: center; 
-            height: auto; 
-    }
-
-
     /*Estilo de botones de registro e inicio de sesión */
-    #btn {
-        display: grid;
+    #botones {
+            display: grid;
             place-items: center; 
-            height: auto; 
+            height: 50px; 
             background-color: #7C946C;
+            border: none;
             border-radius: 10px;
             gap: 10px;
             padding: 8px;
-            margin: 10px;
+            margin: 12px;
             font-family: "IBM Plex Sans", sans-serif;
             font-weight: 400;
             font-style: normal;
             color: white !important;
             font-size: 16.5px;
             text-decoration: none;
-        
+            position: relative; 
+            cursor: pointer;
+            overflow: hidden;
     }
 
-    #btn:hover {
+    .custom-btn:hover {
         color: rgb(99, 56, 56) !important;
+    }
+
+   .glow-effect {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        inset: 0;
+        background: linear-gradient(
+          45deg,
+          red, deeppink, purple, green,
+          red, deeppink, purple, green
+        );
+        transition: opacity 100ms;
+        border-radius: 10px;
+        background-size: 800%;
+        background-position: absolute;
+        filter: blur(10px);
+        animation: glowing 20s linear infinite;
+      }
+
+    @keyframes glowing {
+        0% { background-position: 0 0;}
+        50% { background-position: 400% 0;}
+        100% { background-position: 0 0;}
+    }
+
+    #boton{
+        background-color: #7C946C;
+        border: #7C946C;
+        color: white !important;
+        text-align: center;
     }
 
 /*Estilo para imágenes del carrusel*/
@@ -183,62 +197,29 @@ p{text-align: center;}
     color: #e07A76;
   }
 
-#btn {
-    display: grid;
-        place-items: center; 
-        height: auto; 
-        background-color: #7C946C;
-        border-radius: 10px;
-        gap: 10px;
-        padding: 8px;
-        margin: 10px;
-        font-family: "IBM Plex Sans", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-    
-}
 
 /*Footer*/
-.download {
-    
-        place-items: center; 
-        align-items: center;
-        height: auto;
-        margin: 10px;
-        border-radius: 10px;
-        text-decoration: none !important;
-        background-color: #ecd6d5;
-        box-shadow: 5px rgb(99, 56, 56);
-        font-family: "IBM Plex Sans", sans-serif;
-        font-weight: 400;
-        font-style: normal;
+
+footer{
+    background-color: #c76a67;
 }
 
-#facebook {
-   
-        place-items: center; 
-        align-items: center;
-        height: auto;
-        gap: 10px;
-        margin: 10px;
-        font-family: "IBM Plex Sans", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-        color: rgb(38, 52, 237) !important;
-        font-size: 16.5px;
-        text-decoration: none;
+
+#FooterRibbon{
+    background-image: linear-gradient(to left, #e0c89a, #e07A76);
 }
 
-#Instagram {
-        place-items: center; 
-        align-items: center;
-        height: auto;
-        gap: 10px;
-        margin: 10px;
-        font-family: "IBM Plex Sans", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-        color: rgb(224, 93, 6) !important;
-        font-size: 16.5px;
-        text-decoration: none;
+#Copyright{
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+#FooterLine{
+    background-color: #f4e2b3;
+    height: 3px;
+    width: 60px;  
+    position: sticky;                  
+}
+
+.my-5{
+    margin: 0%;
 }
