siguiente version de comunidad

--- a/css/Comunidad.css
+++ b/css/Comunidad.css
@@ -298,3 +298,10 @@
     border: none;
   }
   
+  #sticky-container {
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 0;
+    z-index: 1000; /* Asegúrate de que esté por encima de otros elementos */
+    padding: 10px;
+  }
