--- a/css/Global.css
+++ b/css/Global.css
@@ -57,3 +57,15 @@
                 .my-5{
                     margin: 0%;
                 }
+
+/* título de la página en construcción*/
+#title {
+    text-align: left;
+    background-color: #FBE2DA;
+  }
+  
+  /* texto del título */
+  #title-1 {
+    text-align: left;
+    margin-left: 38px;
+  }
