--- a/css/Home-Carrousel.css
+++ b/css/Home-Carrousel.css
@@ -1,64 +1,4 @@
 
-/*Estilos para la Navbar*/
-.header .navbar-brand {
-    color: white !important;
-}
-
-.header .nav-link {
-    color: white !important;
-    font-size: 16.5px;
-}
-
-.header .nav-link:hover {
-    color: rgb(99, 56, 56) !important;
-}
-
-@media(max-width: 700px){
-    .nav-link{text-align: center;}
-}
-
-.header .navbar {
-    background-image: linear-gradient(to right, #F5E2BE, #e07A76);
-}
-
-/*Estilos en general para todo nuestro documento, incluye las fuentes que se usaran en todos los elementos*/
-body {
-    font-family: "IBM Plex Sans", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-}
-
-
-h1,h2 {
-    font-family: "Hammersmith One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    text-align: center;
-    padding: 20px;
-}
-
-h3 {
-    font-family: "Hammersmith One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 30px;
-    text-align: center;
-}
-
-p{
-    text-align: center;
-    text-shadow: 4px 4px 10px rgba(255, 0, 0, 0.7);
-}
-
-
-
-.images-container {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
 /*Tamaño del otro logo en movimiento*/
 .logobody {
     display: grid;
@@ -185,7 +125,7 @@ p{
     max-height: 100%;
   }
 
-.images-container, .about-FemTrek, .identidad-FemTrek, .signIn-signUp, .last-part {
+.container, .images-container, .about-FemTrek, .identidad-FemTrek, .signIn-signUp, .last-part {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -197,57 +137,3 @@ p{
     color: #e07A76;
   }
 
-
-/*Footer*/
-
-.footer{
-    background-color: #c76a67;
-    padding: 20px;
-    width: 100%;
-}
-
-#FooterBackground {
-    background-color: #ca6f6c;
-}
-
-#FooterRibbon{
-    background-image: linear-gradient(to left, #e0c89a, #e07A76);
-}
-
-#Copyright{
-    background-color: rgba(0, 0, 0, 0.2);
-}
-
-#FooterLine{
-    background-color: #f4e2b3;
-    height: 3px;
-    width: 60px;  
-    position: sticky;                  
-}
-
-.mt-5{
-    margin: 0%;
-}
-
-.footer .container {
-    max-width: 100%;
-    padding: 20px;
-}
-
-.footer .col {
-    margin-bottom: 20px;
-  }
-  
-  @media (max-width: 768px) {
-    .footer .col {
-      margin-bottom: 10px;
-    }
-  }
-  
-  @media (max-width: 576px) {
-    .footer .col {
-      margin-bottom: 5px;
-    }
-  }
-
-  
