--- a/css/Global.css
+++ b/css/Global.css
@@ -35,7 +35,7 @@
 
                 /*Estilos para el footer*/
 
-                .footer{
+                footer{
                     background-color: #c76a67;
                 }
 
